--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Earn money with your Facebook profile It's child's play!"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
